--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ asgiref==3.4.1
 crispy-tailwind==0.5.0
 Django==3.1.13
 django-crispy-forms==1.12.0
+django-environ==0.6.0
 pytz==2021.1
 sqlparse==0.4.1
