--- a/requirements.txt
+++ b/requirements.txt
@@ -5,26 +5,29 @@ certifi==2021.5.30
 chardet==4.0.0
 charset-normalizer==2.0.4
 click==8.0.1
-cookiecutter==1.7.3
+cookiecutter==2.1.1
 crispy-tailwind==0.5.0
-Django==3.1.13
-django-crispy-forms==1.12.0
-django-environ==0.6.0
-django-tailwind==2.2.0
+Django==3.2.15
+django-browser-reload==1.6.0
+django-crispy-forms==1.14.0
+django-environ==0.9.0
+django-tailwind==3.4.0
 gunicorn==20.1.0
 idna==3.2
 Jinja2==3.0.1
 jinja2-time==0.2.0
 MarkupSafe==2.0.1
-Pillow==8.3.2
+Pillow==9.2.0
 poyo==0.5.0
-psycopg2-binary==2.9.1
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-dateutil==2.8.2
-python-slugify==5.0.2
-pytz==2021.1
+python-slugify==6.1.2
+pytz==2022.2.1
+PyYAML==6.0
 requests==2.26.0
 six==1.16.0
-sqlparse==0.4.1
+sqlparse==0.4.3
 text-unidecode==1.3
-urllib3==1.26.6
-whitenoise==5.3.0
+urllib3==1.26.12
+whitenoise==6.2.0
