--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,36 @@
 arrow==1.1.1
 asgiref==3.4.1
 binaryornot==0.4.4
+black==23.1.0
 certifi==2022.12.7
 chardet==4.0.0
 charset-normalizer==2.0.4
 click==8.0.1
 cookiecutter==2.1.1
 crispy-tailwind==0.5.0
-Django==3.2.18
+Django==3.2.16
 django-browser-reload==1.6.0
 django-crispy-forms==1.14.0
 django-environ==0.9.0
 django-tailwind==3.4.0
+flake8==6.0.0
+flake8-django==1.1.1
 gunicorn==20.1.0
 idna==3.2
 Jinja2==3.0.1
 jinja2-time==0.2.0
 MarkupSafe==2.0.1
-Pillow==9.3.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.0
+pathspec==0.11.0
+Pillow==9.2.0
+platformdirs==3.0.0
 poyo==0.5.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+pycodestyle==2.10.0
+pyflakes==3.0.1
 python-dateutil==2.8.2
 python-slugify==6.1.2
 pytz==2022.2.1
@@ -29,6 +39,6 @@ requests==2.26.0
 six==1.16.0
 sqlparse==0.4.3
 text-unidecode==1.3
+tomli==2.0.1
 urllib3==1.26.12
 whitenoise==6.2.0
-setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
