--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,51 @@
-arrow==1.1.1
-asgiref==3.4.1
+arrow==1.3.0
+asgiref==3.8.1
+astroid==3.2.3
 binaryornot==0.4.4
-black==24.3.0
+black==24.4.2
 certifi==2024.7.4
-chardet==4.0.0
-charset-normalizer==2.0.4
-click==8.0.1
-cookiecutter==2.1.1
-crispy-tailwind==0.5.0
-Django==3.2.25
-django-browser-reload==1.6.0
-django-crispy-forms==1.14.0
-django-environ==0.9.0
-django-tailwind==3.4.0
-flake8==6.0.0
-flake8-django==1.1.1
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+cookiecutter==2.6.0
+crispy-tailwind==1.0.3
+Django==4.2.14
+django-browser-reload==1.13.0
+django-crispy-forms==2.2
+django-environ==0.11.2
+django-tailwind==3.8.0
 gunicorn==22.0.0
 idna==3.7
 Jinja2==3.1.4
 jinja2-time==0.2.0
-MarkupSafe==2.0.1
+lazy-object-proxy==1.10.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 mccabe==0.7.0
+mdurl==0.1.2
 mypy-extensions==1.0.0
-packaging==23.0
-pathspec==0.11.0
-Pillow==10.0.1
-platformdirs==3.0.0
+packaging==24.1
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.2.2
 poyo==0.5.0
-psycopg2==2.9.3
-psycopg2-binary==2.9.3
-pycodestyle==2.10.0
-pyflakes==3.0.1
-python-dateutil==2.8.2
-python-slugify==6.1.2
-pytz==2022.2.1
-PyYAML==6.0
-requests==2.32.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pycodestyle==2.12.0
+pyflakes==3.2.0
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.32.3
+rich==13.7.1
+ruff==0.5.2
 six==1.16.0
-sqlparse==0.5.0
+sqlparse==0.5.1
 text-unidecode==1.3
 tomli==2.0.1
-urllib3==1.26.19
-whitenoise==6.2.0
-setuptools==70.3.0
+types-python-dateutil==2.9.0.20240316
+urllib3==2.2.2
+whitenoise==6.7.0
+wrapt==1.16.0
